tests/c_programs/int_wrapping/invalid_parse/above_max.c
int main(void) {
    long long_max = 9223372036854775808; // too large for long
    return long_max;
}